[gd_scene format=3 uid="uid://c4osl43hbuh14"]

[ext_resource type="Script" uid="uid://vyxsiwv005q" path="res://Interfaces/Menus/PauseMenu/PauseMenu.gd" id="1_w0rmh"]
[ext_resource type="Script" uid="uid://cfdlgc8aalbtr" path="res://Interfaces/Elements/GameMenuButton.gd" id="2_yj8jp"]

[node name="PauseMenu" type="Control" unique_id=416010714]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w0rmh")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=812718561]
custom_minimum_size = Vector2(300, 318)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -159.0
offset_right = 150.0
offset_bottom = 159.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1342212408]
layout_mode = 2
theme_override_constants/separation = 9

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer" unique_id=2032558680]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Main Menu")
focus_neighbor_bottom = NodePath("../Options")
text = "Continue"
script = ExtResource("2_yj8jp")

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer" unique_id=844106616]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Continue")
focus_neighbor_bottom = NodePath("../Main Menu")
text = "Options"
script = ExtResource("2_yj8jp")

[node name="Main Menu" type="Button" parent="MarginContainer/VBoxContainer" unique_id=263316376]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Continue")
text = "Main Menu"
script = ExtResource("2_yj8jp")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
